--- a/VolunteeringUkraineMap/index.html
+++ b/VolunteeringUkraineMap/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue.js starter template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Volunteering Ukraine Project Map</title>
   </head>
-  <body>
+  <body class="m-0 p-0 w-full h-full">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
