--- a/VolunteeringUkraineMap/iframetest.html
+++ b/VolunteeringUkraineMap/iframetest.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>iframe Test</title>
-</head>
-<body style="margin: 0; padding: 0;">
-<iframe src="https://main--volunteeringukraine.netlify.app/" style="width: 100%; height: 100vh;"></iframe>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>iframe Test</title>
+  </head>
+  <body style="margin: 0; padding: 0">
+    <iframe
+      src="https://main--volunteeringukraine.netlify.app/"
+      style="width: 100%; height: 100vh"
+    ></iframe>
+  </body>
 </html>
